tests/type-errors/asset_multi_key_invalid_type.arl
archetype asset_multi_key_invalid_type

asset my_asset identified by i s {
  i : nat;
  s : chain_id;
  v : bool;
} initialized by {
  { 0; "mystr_0"; true }
}

entry exec () {
  var val = my_asset[(0, chainid)].v;
  do_require(val, "ko");
  my_asset.update((0, chainid), { v = false})
}
